* Thu Dec 13 2012
- Added: Portuguese (Brazil) by Alexandro "salmora8" Casanova
- Added: Russian by Danilov "modos189" Alexandr
- Added: The possibility to record a region of the screen
- Added: GPL license text in about dialog
- Changed: Instead of default recording dir beeing $HOME then it will be your XDG_VIDEOS_DIR. Like $HOME/Videos
- Changed: If a chosen microphone no longer exists or not found, the settings dialog will say so. 
- Fixed: Stopwatch does now stop correct when stop-button is pressed

*Thu Nov 15 2012
- Fixed: Issue that caused that you were unable to choose the Spanish translation.
- Added: French by aishen and Greek by Evropi
- Updated: All translations

*Fri Oct 20 2012
- Updated translations: German by Max 'mx01' Huber, Italian by Vincenzo 'smart2128' Reale and Symbian flo
- Very minor under-the-hood improvements

* Fri Sep 28 2012
- Added: When recording you can see the FPS you are recording with. 
- Added: You can choose the location of FFmpeg. Usefull if FFmpeg is not placed in the typical locations. 
- Minor GUI changes
- Many "under-the-hood" improvements, like better use of Qt Signals and Slots

*Thu Jul 26 2012
- Added: Possible to set and use a ffmpeg 'preset'. By default 'ultrafast' is used
- Fixed: Video and audio is sometimes out-of-sync. See ffmpeg preset feature.
- Fixed: If trayIcon-stop-button is pressed while recording and mainwindow …
is not hidden. It will now stay so.
- Fixed: When closing the settingsdialog, it will read/update with the latest changes.
- Fixed: The aboutdialog is now shown on top of the "MainWindow".
- Fixed: The MainWindow is opened in the middle of the screen by default. 
- Removed: The integrated previewplayer, since it was too buggy and no need to redo work others have done with better result. If enabled it will be ingored and the program will use the previewplayer selected (Default: Kaffeine)

* Fri Jun 15 2012
- Added: "Thanks" section to About dialog
- Added: Italian translation by Symbian flo