@@ -1,3 +1,6 @@
+- Cleaned up some textstrings
+- Added chinese by bruce.oy and polish by Daniel Napora
+
 * Thu Dec 13 2012
 - Added: Portuguese (Brazil) by Alexandro "salmora8" Casanova
 - Added: Russian by Danilov "modos189" Alexandr
